change positions cards - cards

--- a/src/app/pages/cards/components/display-cards/display-cards.component.html
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.html
@@ -2,27 +2,25 @@
     <div class="c-display__title-box">        
         <h1 class="c-display__title">
             <span>3º</span>
-            <img class="c-display__title-logo" src="./assets/img/teams/losgrandes.png">
+            <img class="c-display__title-logo" src="./assets/img/teams/losgrandes.png" draggable="false">
             <span>Los Grandes 88</span></h1>
     </div>
     <div class="c-display__cards">
         
-        <div class="c-display__coach-wrapper">
-            <app-card [player]="coach" class="c-display__card c-display__card--coach"></app-card>
-        </div>
+        <app-card [player]="coach" class="c-display__card"></app-card>
 
-        <div class="c-display__card-wrapper" *ngFor="let card of cards index as i" [ngClass]="{'c-display__card-wrapper--upper': i === 1}">
+        <div class="c-display__card-wrapper" *ngFor="let card of cards index as i">
             <div class="c-display__card-icons">
                 <div *ngIf="card.diff != 0" class="c-display__variable">
-                    <img [src]=" card.diff > 0 ? './assets/img/up-icon.svg' : './assets/img/down-icon.svg'" alt="">
+                    <img [src]=" card.diff > 0 ? './assets/img/up-icon.svg' : './assets/img/down-icon.svg'" alt="" draggable="false">
                     <span>{{ card.diff }}</span>
                 </div>
                 <div class="c-display__mvp">
-                    <img src="./assets/img/mvp-icon.svg"  alt="">
+                    <img src="./assets/img/mvp-icon.svg"  alt="" draggable="false">
                     <span>{{ card.mvp }}</span>
                 </div>
                 <div class="c-display__bagre">
-                    <img src="./assets/img/bagre-icon.svg"  alt="">
+                    <img src="./assets/img/bagre-icon.svg"  alt="" draggable="false">
                     <span>{{ card.bagre }}</span>
                 </div>
             </div>
