--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -1,4 +1,4 @@
-<div class="c-cards mat-typography">
+<div class="c-cards mat-typography" #cards>
     <app-back-button routePath="/times"></app-back-button>
     <div class="c-cards__container">
         <h1 class="c-cards__title">cartas</h1>
