--- a/src/app/pages/home/components/banner/banner.component.scss
+++ b/src/app/pages/home/components/banner/banner.component.scss
@@ -9,8 +9,8 @@
         background-repeat: repeat-x;
         height: 100%;
         width: 100%;
-        filter: blur(1px);
-        -webkit-filter: blur(1px);
+        filter: blur(.5px);
+        -webkit-filter: blur(.5px);
         @media #{$tablet}{
             background-size: cover;
         }
