--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -1,7 +1,7 @@
 <div class="c-row c-header" *ngIf="isHeader">
     <h3>Pos.</h3>
     <h3 class="c-header__name">Nome</h3>
-    <h3>Nota</h3>
+    <h3>Média</h3>
     <h3>Cartas</h3>
 </div>
 <div class="c-row__divider-box">
