--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .card {    
     width: 100%;
     height: 100%;
@@ -75,6 +77,9 @@
         text-align: center;
         left: 50%;
         transform: translateX(-50%);
+        @media #{$mobile}{
+            font-size: 8px;
+        }
     }
     
     &__logo {
