logo redirect to home

--- a/src/app/core/toolbar/toolbar.component.scss
+++ b/src/app/core/toolbar/toolbar.component.scss
@@ -4,6 +4,9 @@
     z-index: 50;
     transition: background-color 0.5s ease;
     z-index: 30;
+    &__logo{
+        cursor: pointer;
+    }
     &__spacer{
         flex: 1 1 auto;
     }
