--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -15,7 +15,7 @@
     </div>
     <h3>{{ team.media }}</h3>
     <!-- <button mat-raised-button color="warn">VER <mat-icon>filter_frames</mat-icon></button> -->
-    <button class="c-row__button" mat-mini-fab color="warn">
+    <button class="c-row__button" mat-mini-fab color="warn" routerLink="/cartas/team.nome">
         <mat-icon>keyboard_arrow_right</mat-icon>
     </button>
 </div>
