--- a/src/app/pages/cards/components/display-cards/display-cards.component.html
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.html
@@ -8,9 +8,9 @@
     <div class="c-display__cards">
         <div class="c-display__card-wrapper" *ngFor="let card of players$ | async index as i">
             <div class="c-display__card-icons">
-                <div *ngIf="card.ultimaPontuacao - card.pontuacao != 0" class="c-display__variable">
-                    <img [src]="card.ultimaPontuacao - card.pontuacao > 0 ? './assets/img/up-icon.svg' : './assets/img/down-icon.svg'" alt="" draggable="false">
-                    <span>{{ card.ultimaPontuacao - card.pontuacao  }}</span>
+                <div *ngIf="card.pontuacao - card.ultimaPontuacao != 0" class="c-display__variable">
+                    <img [src]="card.pontuacao - card.ultimaPontuacao > 0 ? './assets/img/up-icon.svg' : './assets/img/down-icon.svg'" alt="" draggable="false">
+                    <span>{{ (card.pontuacao - card.ultimaPontuacao) }}</span>
                 </div>
                 <div class="c-display__mvp">
                     <img src="./assets/img/mvp-icon.svg"  alt="" draggable="false">
