change tooltip text

--- a/src/app/pages/home/components/dream-team/dream-team.component.html
+++ b/src/app/pages/home/components/dream-team/dream-team.component.html
@@ -5,7 +5,7 @@
             >Dream Team
             <span 
                 class="c-dream-team__badge"
-                matTooltip="Os jogadores com maior pontuação de cada role"
+                matTooltip="Os jogadores com maior pontuação de cada posição"
                 [matTooltipPosition]="'above'"
                 matTooltipHideDelay="100"
                 matTooltipClass="c-dream-team__tooltip"
