--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="c-middle">
-        <h4 class="c-middle__text">Feito por <a class="c-middle__text--link" target="_blank" href="https://github.com/dream-team-code/ilha-das-lendas">DREAM TEAM CODE</a></h4>
+        <h4 class="c-middle__text">Desenvolvido por <a class="c-middle__text--link" target="_blank" href="https://github.com/dream-team-code/ilha-das-lendas">DREAM TEAM CODE</a></h4>
         <a href="https://github.com/dream-team-code/ilha-das-lendas" target="_blank" rel="noopener noreferrer"><img class="c-middle__icon" src="./assets/img/github.jpg"></a>
     </div>
     <div class="c-end">
