--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -7,7 +7,7 @@
 <div class="c-row__divider-box">
     <mat-divider class="c-row__divider" *ngIf="!isHeader && team"></mat-divider>
 </div>
-<div class="c-row c-content" *ngIf="!isHeader && team" [routerLink]="['/cartas/' + team.nome]">
+<div class="c-row c-content" *ngIf="!isHeader && team" [routerLink]="['/cartas/' + team.alias]">
     <h3>{{ position }}º</h3>
     <div class="c-team">
         <img class="c-team__img" [src]="'./assets/img/teams/' + team.caminhoRelativo" alt="">
