--- a/src/app/pages/cards/components/display-cards/display-cards.component.html
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.html
@@ -2,7 +2,7 @@
     <div class="c-display__title-box">        
         <h1 class="c-display__title">
             <span>1º</span>
-            <img class="c-display__title-logo" src="./assets/img/teams/losgrandes.png" draggable="false">
+            <img class="c-display__title-logo" src="./assets/img/teams/{{alias}}.png" draggable="false">
             <span>Los Grandes 88</span></h1>
     </div>
     <div class="c-display__cards">
