--- a/src/app/pages/cards/components/display-cards/display-cards.component.html
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.html
@@ -3,7 +3,7 @@
         <h1 class="c-display__title">
             <span>1º</span>
             <img class="c-display__title-logo" src="./assets/img/teams/{{alias}}.png" draggable="false">
-            <span>Los Grandes 88</span></h1>
+            <span>{{ (team$ | async)?.nome }} - {{ (team$ | async)?.media }}</span></h1>
     </div>
     <div class="c-display__cards">
         <div class="c-display__card-wrapper" *ngFor="let card of players$ | async index as i">
