fix tooltip width

--- a/src/app/pages/home/components/dream-team/dream-team.component.scss
+++ b/src/app/pages/home/components/dream-team/dream-team.component.scss
@@ -60,5 +60,6 @@
         background-color: $primary-darker-color;
         font-family: 'Audiowide';
         font-size: 16px;
+        min-width: 280px;
     }
 }
