Hover no botão de voltar

--- a/src/app/shared/back-button/back-button.component.html
+++ b/src/app/shared/back-button/back-button.component.html
@@ -2,5 +2,5 @@
     <button mat-mini-fab color="warn" class="c-back-box__back" [routerLink]="routePath">
         <mat-icon>keyboard_arrow_left</mat-icon>
     </button>
-    <h4 class="c-back-box__text">Voltar</h4>
+    <h4 class="c-back-box__text" [routerLink]="routePath">Voltar</h4>
 </div>
