--- a/src/app/shared/back-button/back-button.component.scss
+++ b/src/app/shared/back-button/back-button.component.scss
@@ -12,6 +12,27 @@
     }
     &__text{
         margin-bottom: 0;
+        position: relative;             
+        
+        &::after {
+            content: "";
+            position:absolute;
+            opacity: 0;
+            transition: opacity .2s;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom:0;
+            background-color: var(--text-primary-color);
+            width: 100%;
+            height: 2px;
+        }
+
+        &:hover {
+            cursor: pointer;    
+            &::after {
+                opacity: 1;                
+            }
+        }
     }
 }
 
