--- a/src/app/pages/cards/components/display-cards/display-cards.component.scss
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.scss
@@ -107,6 +107,10 @@
         }
     }
 
+    &__variable {
+        // set the size of the container whenever has change on the card points
+        min-height: 50px;
+    }
     &__variable,
     &__mvp,
     &__bagre {
